cmake_minimum_required(VERSION 3.17)
project(CS316)

set(CMAKE_CXX_STANDARD 14)

add_executable(BasicDatatypes BasicDatatypes.cpp )
add_executable(ConditionalStatements ConditionalStatements.cpp)
add_executable(Functions Functions.cpp)
add_executable(Pointer Pointer.cpp)
add_executable(ArraysIntroduction ArraysIntroduction.cpp )
add_executable(VariableSizedArrays  VariableSizedArrays.cpp)
