cmake_minimum_required(VERSION 3.17)
project(CS316)

set(CMAKE_CXX_STANDARD 14)

add_executable(BasicDatatypes BasicDatatypes.cpp )
add_executable(ConditionalStatements ConditionalStatements.cpp)
add_executable(Functions Functions.cpp)
add_executable(Pointer Pointer.cpp)
add_executable(ArraysIntroduction ArraysIntroduction.cpp )
add_executable(VariableSizedArrays  VariableSizedArrays.cpp)
add_executable(Question1Lab2 Question1Lab2.cpp )
add_executable(Question2Lab2 Question2Lab2.cpp )
add_executable(Question3Lab2 Question3Lab2.cpp )
